@@ -8,6 +8,7 @@ dpkg (1.18.8) UNRELEASED; urgency=medium
     - Add new format_range() method and deprecate dpkg() and rfc822() methods
       in Dpkg::Changelog.
     - Replace changelog program parsers with perl modules.
+    - Add a getter for the Time::Piece object in Dpkg::Changelog.
   * Test suite:
     - Bump perlcritic ValuesAndExpressions::RequireNumberSeparators minimum
       to 99999.
